--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 .packages
 # Remove the following pattern if you wish to check in your lock file
 pubspec.lock
-
+android
+ios
 # Conventional directory for build outputs
 build/
 
